harden the compilation

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -3,12 +3,17 @@
 #
 
 CC=gcc
-CFLAGS +=-Wextra -Wall -pedantic -pie -fPIE -Wl,-z,relro,-z,now
+CFLAGS +=-Wextra -Wall -pedantic -fPIC -O2
+#Hardening
+CFLAGS +=-D_FORTIFY_SOURCE=2 -fstack-protector-strong -fwrapv --param ssp-buffer-size=4
+LDFLAGS +=-Wl,-z,relro,-z,now
 
 NAME := kcapi-hasher
 C_SRCS := $(wildcard *.c) $(wildcard ../lib/*.c)
 C_OBJS := ${C_SRCS:.c=.o}
+C_ASM := ${C_SRCS:.c=.s}
 OBJS := $(C_OBJS)
+ASM := $(C_ASM)
 
 INCLUDE_DIRS := ../lib
 LIBRARY_DIRS :=
@@ -18,7 +23,7 @@ CFLAGS += $(foreach includedir,$(INCLUDE_DIRS),-I$(includedir))
 LDFLAGS += $(foreach librarydir,$(LIBRARY_DIRS),-L$(librarydir))
 LDFLAGS += $(foreach library,$(LIBRARIES),-l$(library))
 
-.PHONY: all clean distclean
+.PHONY: all scan asm clean distclean
 
 all: $(NAME)
 
@@ -44,8 +49,12 @@ $(NAME): cleanlinks $(OBJS)
 scan:	$(OBJS)
 	scan-build --use-analyzer=/usr/bin/clang $(CC) $(OBJS) -o $(NAME) $(LDFLAGS)
 
+asm:
+	$(foreach b, $(C_SRCS), $(CC) $(CFLAGS) -S -fverbose-asm -o ${b:.c=.s} $(b);)
+
 clean:
 	@- $(RM) $(NAME) sha1sum sha224sum sha256sum sha384sum sha512sum md5sum fipscheck fipshmac sha1hmac sha224hmac sha256hmac sha384hmac sha512hmac
+	@- $(RM) $(ASM)
 	@- $(RM) $(OBJS)
 
 distclean: clean
