build-sys: do not recreate man pages when installing
Building of the man pages is slow. This makes it possible to
separate building and installing of the man pages (as is customary
for package builds) and also makes it easier to verify the man pages
before installing without generating them twice.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -138,7 +138,7 @@ install:
 man:
 	LIBVERSION=$(LIBVERSION) doc/gendocs.sh man
 
-maninstall: man
+maninstall:
 	install -m 0644 doc/man/* $(MAN3)/
 
 html:
