build-sys: create all destination directories and do not strip library
This fixes make install maninstall DESTDIR=/var/tmp/foobar.

Unconditionally stripping libraries is annoying: for people who
install the package for development, it's probably more useful to have
an unstripped library so that gdb/strace/etc an produce good
backtraces. For people who are using a packaging system, stripping
will be done automatically after installation by the packaging system.
Not stripping is necessary to properly generate debuginfo data.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -124,10 +124,9 @@ cppcheck:
 	cppcheck --enable=performance --enable=warning --enable=portability *.h *.c
 
 install:
-	install -m 0755 -s $(LIBNAME) $(DESTDIR)$(LIBDIR)/
-	$(RM) $(LIBDIR)/$(SONAME)
-	$(LNS) $(DESTDIR)$(LIBDIR)/$(LIBNAME) $(DESTDIR)$(LIBDIR)/$(SONAME)
-	install -m 0644 kcapi.h $(DESTDIR)$(INCLUDEDIR)
+	install -m 0755 $(LIBNAME) -D -t $(DESTDIR)$(LIBDIR)/
+	$(LNS) $(LIBNAME) $(DESTDIR)$(LIBDIR)/$(SONAME)
+	install -m 0644 kcapi.h -D -t $(DESTDIR)$(INCLUDEDIR)
 
 ###############################################################################
 #
@@ -139,7 +138,7 @@ man:
 	LIBVERSION=$(LIBVERSION) doc/gendocs.sh man
 
 maninstall:
-	install -m 0644 doc/man/* $(MAN3)/
+	install -m 0644 doc/man/* -D -t $(DESTDIR)$(MAN3)/
 
 html:
 	LIBVERSION=$(LIBVERSION) doc/gendocs.sh html
