Makefile: remove hardcoded -static flag
This is controlled by autotools' --enable-static/--enable-shared flags,
so doesn't need to be explicitly set and results in build failure if
only a shared library is chosen

Signed-off-by: Marcin Nowakowski <marcin.nowakowski@imgtec.com>
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -59,7 +59,7 @@ if ENABLE_KCAPI_TEST
 bin_PROGRAMS += bin/kcapi
 
 bin_kcapi_CPPFLAGS = $(COMMON_CPPFLAGS) -Wno-overlength-strings -pie -fPIE -g -Ilib/
-bin_kcapi_LDFLAGS = $(COMMON_LDFLAGS) -static
+bin_kcapi_LDFLAGS = $(COMMON_LDFLAGS)
 bin_kcapi_LDADD = libkcapi.la
 bin_kcapi_SOURCES = test/kcapi-main.c
 
@@ -70,7 +70,7 @@ if ENABLE_KCAPI_SPEED
 bin_PROGRAMS += bin/kcapi-speed
 
 bin_kcapi_speed_CPPFLAGS = $(COMMON_CPPFLAGS) -pie -fPIE -Wno-variadic-macros -Ilib/
-bin_kcapi_speed_LDFLAGS = $(COMMON_LDFLAGS) -static
+bin_kcapi_speed_LDFLAGS = $(COMMON_LDFLAGS)
 bin_kcapi_speed_LDADD = libkcapi.la
 bin_kcapi_speed_SOURCES = speed-test/cryptoperf.h \
                       speed-test/cryptoperf-aead.c \
@@ -87,7 +87,7 @@ if ENABLE_KCAPI_HASHER
 bin_PROGRAMS += bin/kcapi-hasher
 
 bin_kcapi_hasher_CPPFLAGS = $(COMMON_CPPFLAGS) -fPIC -Ilib/
-bin_kcapi_hasher_LDFLAGS = $(COMMON_LDFLAGS) -static
+bin_kcapi_hasher_LDFLAGS = $(COMMON_LDFLAGS)
 bin_kcapi_hasher_LDADD = libkcapi.la
 bin_kcapi_hasher_SOURCES = apps/kcapi-hasher.c
 
