test: fix getrandom support with various libc flavours
Some libc implementations provide a getrandom syscall wrapper instead
of exposing the raw syscall number, so use it if available.

Signed-off-by: Marcin Nowakowski <marcin.nowakowski@imgtec.com>
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/configure.ac
+++ b/configure.ac
@@ -50,6 +50,8 @@ AM_COND_IF([HAVE_DB2PDF], [], [AC_MSG_WARN([db2pdf not installed])])
 AM_COND_IF([HAVE_DB2PS], [], [AC_MSG_WARN([db2ps not installed])])
 AM_COND_IF([HAVE_MKTEMP], [], [AC_MSG_WARN([mktemp not installed])])
 
+AC_CHECK_FUNCS(getrandom)
+
 AC_CHECK_API_VERSION
 
 AC_ARG_ENABLE([kcapi-test], [AS_HELP_STRING([--enable-kcapi-test], [Compile kcapi test program])], [with_kcapi_test=$enableval])
