kcapi-hasher: ignore environment if secure_getenv is not available
Some C libraries don't provide a secure_getenv method, so currently
remove the check for the environment variable if this is not possible.

Signed-off-by: Marcin Nowakowski <marcin.nowakowski@imgtec.com>
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/configure.ac
+++ b/configure.ac
@@ -51,6 +51,7 @@ AM_COND_IF([HAVE_DB2PS], [], [AC_MSG_WARN([db2ps not installed])])
 AM_COND_IF([HAVE_MKTEMP], [], [AC_MSG_WARN([mktemp not installed])])
 
 AC_CHECK_FUNCS(getrandom)
+AC_CHECK_FUNCS(secure_getenv)
 
 AC_CHECK_API_VERSION
 
