--- a/configure.ac
+++ b/configure.ac
@@ -21,9 +21,10 @@ AC_DEFINE([KCAPI_PATCHLEVEL], [__KCAPI_PATCHLEVEL])
 AM_INIT_AUTOMAKE([foreign])
 LT_INIT
 AC_PROG_CC
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([Makefile lib/doc/Makefile])
 AM_PROG_LIBTOOL
 AC_CONFIG_MACRO_DIRS([m4])
+AX_PROG_CC_FOR_BUILD
 
 AC_CHECK_PROG([CLANG], [clang], [yes])
 AC_CHECK_PROG([CPPCHECK], [cppcheck], [yes])
