Add support for AF_ALG KPP interface
Provide proof-of-concept for the AF_ALG KPP interface discussed at the
linux-crypto mailing list.

Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/configure.ac
+++ b/configure.ac
@@ -11,7 +11,7 @@ dnl 		     enhancements, bug fixes only. Versions with
 dnl		     a decimal point are pre-releases.
 m4_define([__KCAPI_MAJVERSION], [0])
 m4_define([__KCAPI_MINVERSION], [13])
-m4_define([__KCAPI_PATCHLEVEL], [0.8])
+m4_define([__KCAPI_PATCHLEVEL], [0.9])
 m4_define([KCAPI_VERSION], [__KCAPI_MAJVERSION.__KCAPI_MINVERSION.__KCAPI_PATCHLEVEL])
 
 AC_INIT([libkcapi], [KCAPI_VERSION])
@@ -97,5 +97,8 @@ AM_CONDITIONAL([DISABLE_LIB_AEAD], [test "x$with_lib_aead" = "xno"])
 
 AC_ARG_ENABLE([lib-rng], [AS_HELP_STRING([--disable-lib-rng], [Disable random number generator support in library to make it smaller])], [with_lib_rng=$enableval])
 AM_CONDITIONAL([DISABLE_LIB_RNG], [test "x$with_lib_rng" = "xno"])
+
+AC_ARG_ENABLE([lib-kpp], [AS_HELP_STRING([--disable-lib-kpp], [Disable key protocol primitives support in library to make it smaller])], [with_lib_kpp=$enableval])
+AM_CONDITIONAL([DISABLE_LIB_KPP], [test "x$with_lib_kpp" = "xno"])
 
 AC_OUTPUT
