--- a/configure.ac
+++ b/configure.ac
@@ -65,6 +65,7 @@ AC_LINK_IFELSE([AC_LANG_PROGRAM([])],
 	[AC_MSG_RESULT([no])])
 CFLAGS="$my_cflags"
 AC_SUBST([AM_CFLAGS])
+AX_ADD_FORTIFY_SOURCE
 
 AC_CHECK_API_VERSION
 
