Fix soname and file name of library
Reported-by: Greg S. Woods
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -47,7 +47,7 @@ libkcapi_la_SOURCES += lib/kcapi-rng.c
 endif
 
 libkcapi_la_CPPFLAGS = $(COMMON_CPPFLAGS) -fPIC -fvisibility=hidden
-libkcapi_la_LDFLAGS = $(COMMON_LDFLAGS) -Wl,--version-script,$(top_srcdir)/lib/version.lds -release $(VERSION)
+libkcapi_la_LDFLAGS = $(COMMON_LDFLAGS) -Wl,--version-script,$(top_srcdir)/lib/version.lds -version-number `echo $(VERSION) | sed 's/\./:/g'`
 
 SCAN_FILES = $(libkcapi_la_SOURCES)
 
