consolidate duplicate code
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -89,7 +89,7 @@ bin_PROGRAMS += bin/kcapi-hasher
 bin_kcapi_hasher_CPPFLAGS = $(COMMON_CPPFLAGS) -fPIC -Ilib/
 bin_kcapi_hasher_LDFLAGS = $(COMMON_LDFLAGS)
 bin_kcapi_hasher_LDADD = libkcapi.la
-bin_kcapi_hasher_SOURCES = apps/kcapi-hasher.c
+bin_kcapi_hasher_SOURCES = apps/kcapi-hasher.c apps/app-internal.c
 
 SCAN_FILES += $(kcapi_hasher_SOURCES)
 
