ensure that older autotools versions can be used
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,7 @@ LT_INIT
 AC_PROG_CC
 AC_CONFIG_FILES([Makefile lib/doc/Makefile])
 AM_PROG_LIBTOOL
-AC_CONFIG_MACRO_DIRS([m4])
+AC_CONFIG_MACRO_DIR([m4])
 AX_PROG_CC_FOR_BUILD
 
 AC_CHECK_PROG([CLANG], [clang], [yes])
